# emgteach

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
paper/: paper.bib  paper.md
pytest-cache-files-z3edmits/v/cache/: lastfailed  nodeids
src/emgteach/: __init__.py  __main__.py  dsp.py  fatigue.py  io.py  mvc.py
src/emgteach/devices/: __init__.py  arduino.py  base.py  bitalino.py
src/emgteach/gui/: __init__.py  app.py
src/emgteach/gui/tabs/: __init__.py  acquisition.py  analysis.py  mvc.py
src/emgteach/gui/widgets/: __init__.py  logger.py  time_range.py
src/emgteach/workers/: __init__.py  acquisition.py  analysis.py  mvc.py
tests/: conftest.py  test_devices.py  test_dsp.py  test_io.py  test_smoke.py  test_workers.py
